--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1 class="titulo">Pokédex</h1>
 
-    <img src="/assets/images/ASH.png" id="Ash" alt="Ash">
+    <img src="assets/images/ASH.png" id="Ash" alt="Ash">
         
     <main>
         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif"
